update CorsConfig and SecurityConfig